@@ -360,7 +360,12 @@ SPLASH_RLE
 
 INITRD_FS
   The filesystem to use for initrds, needs to be built into the kernel.
-  ext2, cramfs, or initramfs.
+  ext2, cramfs, initramfs, or jffs2.
+
+MKFS_JFFS2
+  If using jffs2 for the INITRD_FS, you will need to set this variable to
+  a command to use to create the image.
+  For example: MKFS_JFFS2 = mkfs.jffs2 -f -p -b -e 0x20000
 
 WRITE_MEDIA
   Add you configuration's name if it can be written to a raw device.
