@@ -46,7 +46,13 @@ debian-installer (20051116) UNRELEASED; urgency=low
   [ Sven Luther ]
   * Updated powerpc config to 2.6.14-2 kernels.
 
- -- Christian Perrier <bubulle@debian.org>  Sun, 18 Dec 2005 09:44:04 +0100
+  [ Joey Hess ]
+  * Patch from Rod Whitby to support jffs2 generation. Closes: #344854
+  * Document the new MKFS_JFFS2 variable.
+  * Allow for TEMP_INITRD (and presumably INITRD too) to be theoretically
+    changed to something that makes more sense for jffs2 images.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 26 Dec 2005 22:28:35 -0500
 
 debian-installer (20051031) unstable; urgency=low
 
